--- a/src/com/bmazurkiewicz01/client/css/roomStyle.css
+++ b/src/com/bmazurkiewicz01/client/css/roomStyle.css
@@ -7,6 +7,21 @@
     -fx-background-radius: 25 0 0 25;
     -fx-opacity: 0.2;
 }
+.context-menu {
+    -fx-background-color: #222222;
+    -fx-border-style: solid;
+    -fx-border-width: 0.6;
+    -fx-border-color: black;
+}
+.context-menu .separator {
+    -fx-background-color: white;
+}
+.menu-item .label {
+    -fx-text-fill: white;
+}
+.menu-item:focused {
+    -fx-background-color: black;
+}
 .connectedUsersListView, .connectedUsersListView .list-cell {
     -fx-background-color: transparent;
     -fx-opacity: 1;
