--- a/src/com/bmazurkiewicz01/client/css/mainStyle.css
+++ b/src/com/bmazurkiewicz01/client/css/mainStyle.css
@@ -2,8 +2,6 @@
     -fx-background-color: linear-gradient(to bottom right, #FF7F50, #6A5ACD);
     -fx-background-radius: 25;
 }
-.table-view:focused {
-}
 .table-cell {
     -fx-alignment: center;
 }
@@ -33,19 +31,41 @@
 .column-header, .filler, .corner, .track, .track-background {
     -fx-background-color: transparent;
 }
+.hamburgerButton {
+    -fx-background-color: transparent;
+    -fx-background-image: url("../resources/hamburgerIcon.png");
+    -fx-background-size: 32px 32px;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: center;
+}
+.hamburgerButton:hover {
+    -fx-background-image: url("../resources/hamburgerIconHover.png");
+}
+.leftPane {
+    -fx-background-color: rgba(51, 51, 51, 0.6);
+    -fx-background-radius: 0 25 25 0;
+}
 .addRoomButton {
-    -fx-background-color: #3265ff;
-    -fx-background-radius: 25;
+    -fx-background-color: rgba(0, 0, 0, 0.05);
+    -fx-background-image: url("../resources/addIcon.png");
+    -fx-background-size: 32px 32px;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: left;
+    -fx-text-fill: white;
 }
 .addRoomButton:hover {
-    -fx-background-color: #4173e0;
+    -fx-background-color: rgba(0, 0, 0, 0.25);
 }
 .logoutButton {
-    -fx-background-color: #FF3232;
-    -fx-background-radius: 25;
+    -fx-background-color: rgba(0, 0, 0, 0.05);
+    -fx-background-image: url("../resources/logoutIcon.png");
+    -fx-background-size: 32px 32px;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: left;
+    -fx-text-fill: white;
 }
 .logoutButton:hover {
-    -fx-background-color: #ff4444;
+    -fx-background-color: rgba(0, 0, 0, 0.25);
 }
 .helloLabel {
     -fx-text-fill: #a9a9a9;
