--- a/src/com/bmazurkiewicz01/client/view/main.fxml
+++ b/src/com/bmazurkiewicz01/client/view/main.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.URL?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -9,56 +10,69 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" prefHeight="600.0" prefWidth="800.0" styleClass="root" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bmazurkiewicz01.client.controller.MainController">
+<AnchorPane fx:id="root" prefHeight="600.0" prefWidth="800.0" styleClass="root" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bmazurkiewicz01.client.controller.MainController">
     <stylesheets>
         <URL value="@../css/appStyle.css" />
         <URL value="@../css/mainStyle.css" />
     </stylesheets>
-    <Button fx:id="logoutButton" layoutX="626.0" layoutY="188.0" onAction="#handleLogoutButton" prefHeight="39.0" prefWidth="116.0" styleClass="logoutButton" text="Logout">
-        <font>
-            <Font size="18.0" />
-        </font>
-    </Button>
-    <Button fx:id="addRoomButton" layoutX="626.0" layoutY="136.0" onAction="#handleAddRoomButton" prefHeight="39.0" prefWidth="116.0" styleClass="addRoomButton" text="Add room">
-        <font>
-            <Font size="18.0" />
-        </font>
-    </Button>
-    <TableView fx:id="roomTableView" layoutX="180.0" layoutY="136.0" onMouseClicked="#handleRowClick" prefHeight="366.0" prefWidth="420.0">
+    <TableView fx:id="roomTableView" layoutX="100.0" layoutY="77.0" onMouseClicked="#handleRowClick" prefHeight="490.0" prefWidth="600.0">
         <columns>
-            <TableColumn fx:id="nameColumn" editable="false" minWidth="0.0" prefWidth="139.0" resizable="false" text="Name">
+            <TableColumn fx:id="nameColumn" editable="false" minWidth="0.0" prefWidth="199.0" resizable="false" text="Name">
                 <cellValueFactory>
                     <PropertyValueFactory property="name" />
                 </cellValueFactory>
             </TableColumn>
-            <TableColumn fx:id="ownerColumn" editable="false" minWidth="1.0" prefWidth="139.0" resizable="false" text="Owner">
+            <TableColumn fx:id="ownerColumn" editable="false" minWidth="1.0" prefWidth="199.0" resizable="false" text="Owner">
                 <cellValueFactory>
                     <PropertyValueFactory property="owner" />
                 </cellValueFactory>
             </TableColumn>
-            <TableColumn fx:id="connectedColumn" editable="false" minWidth="1.0" prefWidth="139.0" resizable="false" text="Connected">
+            <TableColumn fx:id="connectedColumn" editable="false" minWidth="1.0" prefWidth="199.0" resizable="false" text="Connected">
                 <cellValueFactory>
                     <PropertyValueFactory property="connected" />
                 </cellValueFactory>
             </TableColumn>
         </columns>
     </TableView>
-    <ImageView fx:id="minimizeButton" styleClass="minimizeButton" fitHeight="24.0" fitWidth="24.0" layoutX="718.0" layoutY="16.0">
+    <ImageView fx:id="minimizeButton" fitHeight="24.0" fitWidth="24.0" layoutX="718.0" layoutY="16.0" styleClass="minimizeButton">
         <Image url="@../resources/minimizeIcon.png" />
     </ImageView>
-    <Label fx:id="helloLabel" alignment="CENTER" layoutX="276.0" layoutY="56.0" prefHeight="58.0" prefWidth="227.0" styleClass="helloLabel" text="Hello, User!">
+    <Label fx:id="helloLabel" alignment="CENTER" layoutX="276.0" layoutY="11.0" prefHeight="58.0" prefWidth="227.0" styleClass="helloLabel" text="Hello, User!">
         <font>
-          <Font size="28.0" />
+            <Font size="28.0" />
         </font>
     </Label>
-    <ImageView fx:id="closeButton" styleClass="closeButton" fitHeight="24.0" fitWidth="24.0" layoutX="751.0" layoutY="16.0">
+    <ImageView fx:id="closeButton" fitHeight="24.0" fitWidth="24.0" layoutX="751.0" layoutY="16.0" styleClass="closeButton">
         <Image url="@../resources/closeIcon.png" />
     </ImageView>
     <Label fx:id="errorLabel" layoutX="180.0" layoutY="541.0" prefHeight="27.0" prefWidth="420.0" style="-fx-text-alignment: center; -fx-alignment: center;" text="Label" textFill="RED" visible="false">
         <font>
-          <Font size="18.0" />
+            <Font size="18.0" />
         </font>
     </Label>
+    <Button fx:id="hamburgerButton" layoutX="14.0" layoutY="16.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="32.0" styleClass="hamburgerButton" />
+    <AnchorPane fx:id="leftPane" prefWidth="160.0" styleClass="leftPane" translateX="-160" AnchorPane.bottomAnchor="56.0" AnchorPane.topAnchor="56.0">
+        <VBox alignment="CENTER">
+            <Button fx:id="addRoomButton" onAction="#handleAddRoomButton" prefHeight="39.0" prefWidth="116.0" styleClass="addRoomButton" text="       Add room" GridPane.columnIndex="0" GridPane.rowIndex="0">
+                <font>
+                    <Font size="14.0" />
+                </font>
+                <VBox.margin>
+                    <Insets bottom="10" left="10" right="10" top="10" />
+                </VBox.margin>
+            </Button>
+            <Button fx:id="logoutButton" onAction="#handleLogoutButton" prefHeight="39.0" prefWidth="116.0" styleClass="logoutButton" text="    Logout" GridPane.columnIndex="0" GridPane.rowIndex="1">
+                <font>
+                    <Font size="14.0" />
+                </font>
+                <VBox.margin>
+                    <Insets bottom="10" left="10" right="10" top="10" />
+                </VBox.margin>
+            </Button>
+        </VBox>
+    </AnchorPane>
 </AnchorPane>
