--- a/src/com/bmazurkiewicz01/client/css/mainStyle.css
+++ b/src/com/bmazurkiewicz01/client/css/mainStyle.css
@@ -67,6 +67,17 @@
 .logoutButton:hover {
     -fx-background-color: rgba(0, 0, 0, 0.25);
 }
+.userPropertiesButton {
+    -fx-background-color: rgba(0, 0, 0, 0.05);
+    -fx-background-image: url("../resources/changeUserIcon.png");
+    -fx-background-size: 32px 32px;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: left;
+    -fx-text-fill: white;
+}
+.userPropertiesButton:hover {
+    -fx-background-color: rgba(0, 0, 0, 0.25);
+}
 .helloLabel {
     -fx-text-fill: #a9a9a9;
 }
