--- a/src/com/bmazurkiewicz01/client/view/main.fxml
+++ b/src/com/bmazurkiewicz01/client/view/main.fxml
@@ -57,7 +57,7 @@
     <Button fx:id="hamburgerButton" layoutX="14.0" layoutY="16.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="32.0" styleClass="hamburgerButton" />
     <AnchorPane fx:id="leftPane" prefWidth="160.0" styleClass="leftPane" translateX="-160" AnchorPane.bottomAnchor="56.0" AnchorPane.topAnchor="56.0">
         <VBox alignment="CENTER">
-            <Button fx:id="addRoomButton" onAction="#handleAddRoomButton" prefHeight="39.0" prefWidth="116.0" styleClass="addRoomButton" text="       Add room" GridPane.columnIndex="0" GridPane.rowIndex="0">
+            <Button fx:id="addRoomButton" onAction="#handleAddRoomButton" prefHeight="39.0" prefWidth="130.0" styleClass="addRoomButton" text="       Add room">
                 <font>
                     <Font size="14.0" />
                 </font>
@@ -65,7 +65,15 @@
                     <Insets bottom="10" left="10" right="10" top="10" />
                 </VBox.margin>
             </Button>
-            <Button fx:id="logoutButton" onAction="#handleLogoutButton" prefHeight="39.0" prefWidth="116.0" styleClass="logoutButton" text="    Logout" GridPane.columnIndex="0" GridPane.rowIndex="1">
+            <Button fx:id="userPropertiesButton" onAction="#handleUserPropertiesButton" prefHeight="39.0" prefWidth="130.0" styleClass="userPropertiesButton" text="       User Properties">
+                <font>
+                    <Font size="12.0" />
+                </font>
+                <VBox.margin>
+                    <Insets bottom="10" left="10" right="10" top="10" />
+                </VBox.margin>
+            </Button>
+            <Button fx:id="logoutButton" onAction="#handleLogoutButton" prefHeight="39.0" prefWidth="130.0" styleClass="logoutButton" text="    Logout">
                 <font>
                     <Font size="14.0" />
                 </font>
